--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="./js/01-variables.js" type="module"></script>
+    <!-- <script src="./js/01-variables.js" type="module"></script> -->
+     <script src="./js/02-variables.js" type="module"></script>
 </body>
 </html>
