--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <!-- <script src="./js/01-variables.js" type="module"></script> -->
-     <script src="./js/02-variables.js" type="module"></script>
+     <!-- <script src="./js/02-variables.js" type="module"></script> -->
+     <script src="./js/03-variables.js" type="module"></script>
 </body>
 </html>
