--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <!-- <script src="./js/01-variables.js" type="module"></script> -->
      <!-- <script src="./js/02-variables.js" type="module"></script> -->
-     <script src="./js/03-variables.js" type="module"></script>
+     <!-- <script src="./js/03-variables.js" type="module"></script> -->
+      <script src="./js/04-variables.js" type="module"></script>
 </body>
 </html>
