--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- <script src="./js/01-variables.js" type="module"></script> -->
      <!-- <script src="./js/02-variables.js" type="module"></script> -->
      <!-- <script src="./js/03-variables.js" type="module"></script> -->
-      <script src="./js/04-variables.js" type="module"></script>
+      <!-- <script src="./js/04-variables.js" type="module"></script> -->
+       <script src="./js/05-variables.js" type="module"></script>
 </body>
 </html>
